remove guava usage from class Correspondence